# Hackathons

.conda/.condatmp/: 03c71634-b8ec-4758-821c-9581649bd8b4  109f0dbd-500b-4425-ac9c-e6f2f6debe22  4cc608ee-004b-4ef4-8803-0c947cf6a25b  b0050161-5e42-433a-8f1b-c0cc73f80a04  (+3 more)
01 Wind Turbine/: 01. Basic XGBoost.ipynb
02 Loan Approval Predictions/: 00 Baseline LAP V1.ipynb  03 All Num Feat. Base XGB.ipynb  04 Feat. Engg. Num Base XGB.ipynb  07 LightGB Alternative.ipynb  08 CatBoost Alternative.ipynb  Best_Of_The_Best_Ensemble.ipynb  CatBoost_Regularized.ipynb  Readme.md
03 ICR - Identifying Age-Related Conditions/: icr-iarc-gradient-boosting-ensemble-lb-0-22.ipynb
04 Child Mind Institute — Problematic Internet Use/: Readme.md
05 Jane Street Market Data Forecasting/: 01-preprocessing-lags.ipynb
06 CIBMTR/: .gitignore  01 EDA.ipynb  01 Exp_01.ipynb  02 Base XGB.ipynb  03 Transform XGB.ipynb  04 Ensemble_Attempt V4.ipynb  Readme.md
07 Big Mart Sales Predictions/: .gitignore  01_EDA.ipynb  02_Solution.ipynb  03_XGBoost_Standalone.ipynb  04_LightGBM_Standalone.ipynb  05_CatBoost_Standalone.ipynb  05_Full_Solution.ipynb  06_Full_Solution.ipynb  08_Full_Solution_v8.ipynb  09_Full_Solution_v9_EntityEmbedding.ipynb  09_Full_Solution_v9_EntityEmbedding_1.ipynb  10_Full_Solution_v10.ipynb  BigMart_Approach.docx  BigMart_Approach.md  pyproject.toml
07 Big Mart Sales Predictions/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
07 Big Mart Sales Predictions/catboost_info/learn/: events.out.tfevents
Perkinson/: Untitled.ipynb
(+2 files in other folders)
