[project]
name = "mart_sales"
version = "0.1.0"
description = "Big Mart Sales Prediction"
readme = "README.md"
authors = [
    {name = "Shirsendu Dhar"}
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "catboost>=1.2.10",
    "xgboost>=3.2.0",
    "optuna>=4.8.0",
]
